@@ -3,6 +3,7 @@ synaptic (0.75.13) UNRELEASED; urgency=low
   * debian/synaptic.menu:
     - use x-terminal-emulator -e synaptic-pkexec to support systems
       that do not have a GUI policykit agent running (closes: #678847)
+  * include all origins in the origin filter not just the first one
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 26 Jun 2012 12:31:38 +0200
 
